@@ -36,6 +36,17 @@ begin_import
 import|import
 name|java
 operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -200,7 +211,7 @@ DECL|method|RAMDirectory
 specifier|public
 name|RAMDirectory
 parameter_list|(
-name|Directory
+name|FSDirectory
 name|dir
 parameter_list|,
 name|IOContext
@@ -223,7 +234,7 @@ DECL|method|RAMDirectory
 specifier|private
 name|RAMDirectory
 parameter_list|(
-name|Directory
+name|FSDirectory
 name|dir
 parameter_list|,
 name|boolean
@@ -249,6 +260,25 @@ name|listAll
 argument_list|()
 control|)
 block|{
+if|if
+condition|(
+operator|!
+name|Files
+operator|.
+name|isDirectory
+argument_list|(
+name|dir
+operator|.
+name|getDirectory
+argument_list|()
+operator|.
+name|resolve
+argument_list|(
+name|file
+argument_list|)
+argument_list|)
+condition|)
+block|{
 name|copyFrom
 argument_list|(
 name|dir
@@ -260,6 +290,7 @@ argument_list|,
 name|context
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
