@@ -2361,16 +2361,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|aux
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 argument_list|)
@@ -2610,16 +2605,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|aux
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 argument_list|)
@@ -4289,16 +4279,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|dir
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
