@@ -302,19 +302,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|store
-operator|.
-name|RAMDirectory
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|util
 operator|.
 name|IOUtils
@@ -3370,16 +3357,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|startDir
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
