@@ -1277,16 +1277,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|startDir
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 decl_stmt|;
