@@ -3046,16 +3046,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|addDir
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -4430,16 +4425,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|dir1
-argument_list|,
-name|newIOContext
-argument_list|(
-name|random
-argument_list|()
-argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
