@@ -167,33 +167,7 @@ name|lucene
 operator|.
 name|store
 operator|.
-name|IOContext
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
 name|MockDirectoryWrapper
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|store
-operator|.
-name|RAMDirectory
 import|;
 end_import
 begin_import
@@ -456,14 +430,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|directory
-argument_list|,
-name|IOContext
-operator|.
-name|DEFAULT
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -519,14 +490,11 @@ argument_list|(
 name|random
 argument_list|()
 argument_list|,
-operator|new
-name|RAMDirectory
+name|TestUtil
+operator|.
+name|ramCopyOf
 argument_list|(
 name|dir2
-argument_list|,
-name|IOContext
-operator|.
-name|DEFAULT
 argument_list|)
 argument_list|)
 decl_stmt|;
