@@ -1016,7 +1016,33 @@ name|lucene
 operator|.
 name|store
 operator|.
+name|IOContext
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
 name|NoLockFactory
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|RAMDirectory
 import|;
 end_import
 begin_import
@@ -8715,6 +8741,57 @@ literal|false
 return|;
 block|}
 block|}
+block|}
+comment|/** Returns a copy of directory, entirely in RAM */
+DECL|method|ramCopyOf
+specifier|public
+specifier|static
+name|RAMDirectory
+name|ramCopyOf
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|RAMDirectory
+name|ram
+init|=
+operator|new
+name|RAMDirectory
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|String
+name|file
+range|:
+name|dir
+operator|.
+name|listAll
+argument_list|()
+control|)
+block|{
+name|ram
+operator|.
+name|copyFrom
+argument_list|(
+name|dir
+argument_list|,
+name|file
+argument_list|,
+name|file
+argument_list|,
+name|IOContext
+operator|.
+name|DEFAULT
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|ram
+return|;
 block|}
 comment|/** List of characters that match {@link Character#isWhitespace} */
 DECL|field|WHITESPACE_CHARACTERS
